--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 name: miniscript
 description: A MiniScript interpreter for Dart.
 version: 1.0.0
+homepage: https://github.com/dartleaf/miniscript
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
