--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: miniscript
-description: A MiniScript interpreter for Dart.
+description: A MiniScript interpreter for Dart. It can be used to run scripts or as a library for embedding MiniScript in Dart applications
 version: 1.6.2-2
 homepage: https://github.com/dartleaf/miniscript
 
