--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: miniscript
 description: A MiniScript interpreter for Dart. It can be used to run scripts or as a library for embedding MiniScript in Dart applications
-version: 1.6.2-6
+version: 1.6.2-7
 homepage: https://github.com/dartleaf/miniscript
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: ">=3.0.0 <4.0.0"
 
 dev_dependencies:
   lints: ^5.0.0
